samples/_failures_safe/1761265467_94dc0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3fc6760.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_c3fc6760.c:161:42: error: expected ‘;’ at end of input
  161 |             case TOKEN_OPERATOR: type_str
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_c3fc6760.c:161:13: error: expected declaration or statement at end of input
  161 |             case TOKEN_OPERATOR: type_str
      |             ^~~~
./samples/SAFE/__tmp_c3fc6760.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3fc6760.c:161:13: error: expected declaration or statement at end of input
